--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         # Include amd64 on all platforms.
-        goos: [ windows, freebsd, openbsd, linux, darwin ]
+        goos: [ windows, linux, darwin ]
         goarch: [ amd64, 386 ]
         exclude:
           # Exclude i386 on darwin.
@@ -58,37 +58,7 @@ jobs:
           # BEGIN riscv64 & ARM64
           - goos: linux
             goarch: arm64
-          - goos: linux
-            goarch: riscv64
-          # END riscv64 & ARM64
-          # BEGIN MIPS
-          - goos: linux
-            goarch: mips64
-          - goos: linux
-            goarch: mips64le
-          - goos: linux
-            goarch: mipsle
-          - goos: linux
-            goarch: mips
-          # END MIPS
-          # BEGIN PPC
-          # - goos: linux # Removed due to the unsupport of shirou/gopsutil 
-          #   goarch: ppc64
-          - goos: linux
-            goarch: ppc64le
-          # END PPC
-          # BEGIN FreeBSD ARM
-          - goos: freebsd
-            goarch: arm64
-          - goos: freebsd
-            goarch: arm
-            goarm: 7
-          # END FreeBSD ARM
-          # BEGIN S390X
-          - goos: linux
-            goarch: s390x
-          # END S390X
-          # END Other architectures
+
       fail-fast: false
 
     runs-on: ubuntu-latest
@@ -100,6 +70,9 @@ jobs:
     steps:
       - name: Checkout codebase
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
       - name: Show workflow information
         id: get_filename
         run: |
