--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ on:
       - 'master'
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: mikasofa/XrayR
+  IMAGE_NAME: mikasofa/xrayr
 
 jobs:
   build:
@@ -29,7 +29,6 @@ jobs:
           - linux/arm/v6
           - linux/arm/v7
           - linux/arm64
-          - linux/s390x
     steps:
       - name: Checkout
         uses: actions/checkout@v4
